--- a/Project/client/src/index.html
+++ b/Project/client/src/index.html
@@ -29,7 +29,8 @@
   <body>
     <div id="pointers"></div>
     <canvas id="canvas" width="2000" height="1000"></canvas>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./Script.js"></script>
+    <script>
+        var socket = io();
+    </script>
   </body>
 </html>
