--- a/Project/client/src/index.html
+++ b/Project/client/src/index.html
@@ -23,14 +23,14 @@
       }
     </style>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./Script.js"></script>
+    
+    <script src="./socket.js"></script>
   </head>
 
   <body>
     <div id="pointers"></div>
     <canvas id="canvas" width="2000" height="1000"></canvas>
-    <script>
-        var socket = io();
-    </script>
+    
+
   </body>
 </html>
