--- a/Project/client/src/index.html
+++ b/Project/client/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -33,4 +33,4 @@
     
 
   </body>
-</html>
+</html> -->
